--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="google-site-verification" content="Zqz968QOMW7zsOEidLtK_WnuIvnYjnmLTqBKJRtMhfM" />
   <title>Robo Bharat Technologies</title>
+  
+  <meta name="description" content="Robo Bharat Technologies is an Indian robotics and automation company building innovative tools for students and industries." />
+
+<meta name="keywords" content="Robo Bharat, Robotics India, Automation India, YantraOne, Robotics Company India" />
 
   <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
