--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="google-site-verification" content="Zqz968QOMW7zsOEidLtK_WnuIvnYjnmLTqBKJRtMhfM" />
+  <link rel="canonical" href="https://vishalhe21.github.io/robo-bharat/">
   <title>Robo Bharat Technologies</title>
   
   <meta name="description" content="Robo Bharat Technologies is an Indian robotics and automation company building innovative tools for students and industries." />
