--- a/index.html
+++ b/index.html
@@ -45,6 +45,26 @@
   </script>
 </head>
 <body class="antialiased text-gray-800">
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "Robo Bharat Technologies",
+  "url": "https://vishalhe21.github.io/robo-bharat/",
+  "logo": "https://vishalhe21.github.io/robo-bharat/robo-bharat-logo.png",
+  "founder": {
+    "@type": "Person",
+    "name": "Vishal Kumar",
+    "affiliation": "Dr. B. R. Ambedkar SOSE, Delhi"
+  },
+  "description": "Robo Bharat Technologies is a robotics and automation startup founded by Vishal Kumar, dedicated to building affordable and accessible robotics solutions for India.",
+  "sameAs": [
+    "https://www.linkedin.com/company/yantraone",
+    "https://instagram.com/robobharat",
+    "https://github.com/vishalhe21"
+  ]
+}
+</script>
 
   <!-- Header -->
   <header class="bg-white shadow-md sticky top-0 z-20">
@@ -292,6 +312,8 @@
                 <a href="#education" class="bg-white text-primary border border-primary px-8 py-3 rounded-xl text-lg font-bold shadow-lg hover:bg-indigo-50 transition duration-300 transform hover:scale-105">
                     Explore Careers
                 </a>
+              <h2>Founder</h2>
+<p>Robo Bharat Technologies was founded by Vishal Kumar, a student innovator from Dr. B. R. Ambedkar SoSE, Delhi. He created the company to build affordable robotics and automation solutions for India.</p>
             </div>
         </div>
     </section>
