--- a/index.html
+++ b/index.html
@@ -296,7 +296,9 @@
                     </div>
                 </div>
             </div>
-          <h2>Founder</h2>
+          <h2 class="text-3xl sm:text-4xl font-extrabold text-gray-900 mb-4">
+                        Our <span class="text-accent">Founder</span>
+                    </h2>
 <p>Robo Bharat Technologies was founded by Vishal Kumar, a student innovator from Dr. B. R. Ambedkar SoSE, Delhi. He created the company to build affordable robotics and automation solutions for India.</p>
             
         </div>
